implemented sub features get and update